--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -932,3 +932,19 @@ p {
     border: $universalBorder;
     border-radius: 4px;
 }
+/* buttons */
+.btn {
+    display: inline-block;
+    border: $universalBorder;
+    font-size: 1em;
+    text-decoration: none;
+    color: #000000;
+    font-family: inherit;
+    line-height: inherit;
+    padding: 5px 10px;
+    cursor: pointer;
+    background: #ffffff;
+    &:hover {
+        background: #eeeeee;
+    }
+}
